--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,7 +611,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../../IMG_5182\ \(2\).jpg") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
